--- a/python/showdata/templates/showdata/spatialseries2.html
+++ b/python/showdata/templates/showdata/spatialseries2.html
@@ -4,8 +4,8 @@
 {% load i18n %}
 {% load staticfiles %}
 {% block extra_assets %}
-    {% leaflet_js %}
-    {% leaflet_css %}
+{% leaflet_js %}
+{% leaflet_css %}
 
     <script src="{% static 'rmap/libs/jquery/2.1.1/jquery.min.js' %}" type="text/javascript"></script>
     <!-- Custom styles for this template -->
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="{% static 'rmap/libs/jquery-ui-1.12.1/jquery-ui.min.css' %}" type="text/css"/>
     <script type="text/javascript" src="{% static 'rmap/libs/jquery-ui-1.12.1/jquery-ui.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'showdata/PruneCluster.js' %}"></script>
+
+    <link rel="stylesheet" type="text/css" href="{% static 'showdata/LeafletStyleSheet.css' %}"/>
 
     <!-- TEMPU DOMIUS CALENDAR  -->
     <!-- need jquery!!!!! -->
@@ -45,6 +47,86 @@
         function getColor(d, min, max) {
             return colors[getColorIndex(d, min, max)];
         }
+
+
+        function null2_(i)
+        {
+            return(i === null) ? "-" : i;
+        }
+
+        function setpopup(feature)
+        {
+            let b = borinud.config.B[feature.properties.var];
+
+            let popupText = "<div id='preloadimages'>" +
+                "Ident: " + null2_(feature.properties.ident) +
+                "<br>Lon: " + feature.properties.lon/100000 +
+                "<br>Lat: " + feature.properties.lat/100000 +
+                "<br>Network: " + "<a href=/network/"+feature.properties.network+">"+feature.properties.network+"</a>" +
+                "<br>Trange: " + borinud.config.trange.describe(feature.properties.trange[0],feature.properties.trange[1],feature.properties.trange[2]) +
+                "<br>Level: " + borinud.config.level.describe(feature.properties.level[0],feature.properties.level[1],feature.properties.level[2],feature.properties.level[3]) +
+                "<br>Date: " + feature.properties.date +
+                "<br>Var: " + b.description + " " + feature.properties.val + " (" + b.unit + ")" +
+                "<br><a href='/showdata/"+null2_(feature.properties.ident)+"/"+feature.properties.lon+","+feature.properties.lat+"/"+null2_(feature.properties.network)+"/*/*/*/stations{% if dsn %}?dsn={{dsn}}{% endif %}'>Constant station data</a>";
+
+
+            if(selected_values.dsn === 'sample' || selected_values.dsn === 'report'){
+
+                    //TODO calcolarli
+                    //let datefrom="00:00_"+kwargs.get("year")+kwargs.get("month")+"01";
+                    //let dateuntil="23:59_"+kwargs.get("year")+kwargs.get("month")+lastdayinmonth;
+                    let datefrom="00:00_20200101";
+                    let dateuntil="23:59_20200101";
+
+
+                popupText += "<br><a href='/showdata/"+null2_(feature.properties.ident)+"/"+feature.properties.lon+","+
+                    feature.properties.lat+"/"+null2_(feature.properties.network)+"/"+feature.properties.trange+"/"+
+                    null2_(feature.properties.level[0])+","+null2_(feature.properties.level[1])+","+
+                    null2_(feature.properties.level[2])+","+null2_(feature.properties.level[3])+"/"+
+                    null2_(feature.properties.var)+
+                    `/timeseries/${selected_values.date.split("-")[0]}/${selected_values.date.split("-")[1]}/${selected_values.date.split("-")[2]}` +
+                    `${selected_values.hour !== "*" ? "/" + selected_values.hour : ""}?dsn=${selected_values.dsn}_fixed'>`+
+                    "<img src=/graphite/render/?target=" +
+                    selected_values.dsn + "_fixed."+null2_(feature.properties.ident)+"."+feature.properties.lon+"_"+
+
+                    feature.properties.lat+"."+null2_(feature.properties.network)+"."+feature.properties.trange[0]+
+                    "_"+feature.properties.trange[1]+"_"+feature.properties.trange[2]+"."+
+                    null2_(feature.properties.level[0])+"_"+null2_(feature.properties.level[1])+"_"+
+                    null2_(feature.properties.level[2])+"_"+null2_(feature.properties.level[3])+"."+null2_(feature.properties.var) +
+                    "&from="+datefrom+"&until="+dateuntil+"&hideLegend=true&tz=UTC&lineMode=connected&lineWidth=3&" +
+                    "width=150&height=100&graphOnly=true' alt='graphic for {{var}}' class='img-thumbnail'>";
+
+
+                if ( feature.properties.ident !== null ){
+                    popupText += "<br><a href='/showdata/"+null2_(feature.properties.ident)+"/"+feature.properties.lon+","+
+                        feature.properties.lat+"/"+null2_(feature.properties.network)+"/"+feature.properties.trange+"/"+
+                        null2_(feature.properties.level[0])+","+null2_(feature.properties.level[1])+","+
+                        null2_(feature.properties.level[2])+","+null2_(feature.properties.level[3])+"/"+
+                        null2_(feature.properties.var)+
+                        `/timeseries/${selected_values.date.split("-")[0]}/${selected_values.date.split("-")[1]}/${selected_values.date.split("-")[2]}` +
+                        `${selected_values.hour !== "*" ? "/" + selected_values.hour : ""}?dsn=${selected_values.dsn}_mobile'>`+
+                        "{% trans 'Graph for mobile station' %}</a>";
+                }
+            }
+            else{
+                popupText += "<br><a href='/showdata/"+null2_(feature.properties.ident)+"/"+feature.properties.lon+
+                    ","+feature.properties.lat+"/"+null2_(feature.properties.network)+"/"+feature.properties.trange+
+                    "/"+null2_(feature.properties.level[0])+","+null2_(feature.properties.level[1])+","+
+                    null2_(feature.properties.level[2])+","+null2_(feature.properties.level[3])+"/"+
+                    null2_(feature.properties.var)+
+                    `/timeseries/${selected_values.date.split("-")[0]}/${selected_values.date.split("-")[1]}/${selected_values.date.split("-")[2]}` +
+                    `${selected_values.hour !== "*" ? "/" + selected_values.hour : ""}?dsn=${selected_values.dsn}'>` +
+                    "{% trans 'Graph data for station' %}" +
+                    "</a>";
+            }
+
+            popupText +="</div>";
+
+            return popupText;
+
+        }
+
+
     </script>
 
     <script type="text/javascript" src="{% static 'showdata/borinud.trange.js' %}"></script>
@@ -146,12 +228,20 @@
                 "16", "17", "18", "19", "20", "21", "22", "23"],
             vars: [],
             timerange: [],
-            level: []
+            level: [],
+            dsn: ["report", "sample"]
         };
 
         //contain the option selected in corresponding select, * is a  wildcard
         //at the  start this  are extract from url
         let url_vars = new URL(window.location.href).toString().split("/");
+        if (url_vars[14]){
+            [url_vars[14], url_vars[15]] = url_vars[14].split("?dsn=");
+        }
+        else {
+            url_vars[14] = undefined;
+            [url_vars[13], url_vars[15]] = url_vars[13].split("?dsn=");
+        }
         var selected_values = {
             ident: url_vars[4],
             lon_lat: url_vars[5],
@@ -161,6 +251,7 @@
             vars: url_vars[9],
             timerange: url_vars[7],
             level: url_vars[8],
+            dsn: (url_vars[15] === "sample"? url_vars[15]: "report")
         };
 
 
@@ -172,7 +263,6 @@
             url: borinud.config.ajax.baseUrl + "/*/*/*/*/*/*/summaries",
             dataType: borinud.config.ajax.dataType,
             success: function (resp) {
-                console.log(resp)
                 resp = (JSON.parse("{\"j\":[" + resp.replace(/}\n{/g, "}, {") + "]}")).j;
 
                 for (var r of resp) {
@@ -234,6 +324,11 @@
 
             // update only calendar filed
             populateDate();
+            //select hour and dsn
+            let select = document.getElementById("hour");
+            select.value = selected_values["hour"];
+            select = document.getElementById("dsn");
+            select.value = selected_values["dsn"];
         }
 
         /**
@@ -280,6 +375,15 @@
                 select.dispatchEvent(new Event('change'));
             });
 
+        }
+
+        /**
+         * Equal to populateForm but only used for dsn, dsn not impact on other var
+         */
+        function populateDSN(e) {
+            if (e && e.id === "dsn") {
+                selected_values["dsn"] = document.getElementById("dsn").selectedOptions[0].value;
+            }
         }
 
 
@@ -343,7 +447,7 @@
             let newUrl = `${url_vars[0]}//${url_vars[2]}/${url_vars[3]}/${selected_values.ident}/${selected_values.lon_lat}/` +
                 `${selected_values.network}/${selected_values.timerange}/${selected_values.level}/${selected_values.vars}/` +
                 `${url_vars[10]}/${selected_values.date.split("-")[0]}/${selected_values.date.split("-")[1]}/${selected_values.date.split("-")[2]}` +
-                `${selected_values.hour !== "*" ? "/" + selected_values.hour : ""}`;
+                `${selected_values.hour !== "*" ? "/" + selected_values.hour : ""}?dsn=${selected_values.dsn}`;
             /* Get the text field */
             let copyText = document.getElementById("newUrlClipboard");
             copyText.style.display = 'block';
@@ -356,6 +460,47 @@
             document.execCommand("copy");
             copyText.style.display = 'none';
             alert("New url copy to clipboard.")
+        }
+
+        /**
+         * special action for button at bottom page
+         */
+        function openLink(operation){
+            if (operation === "show_all_values"){
+
+                let select = document.getElementById("ident");
+                select.selectedIndex = 0;
+                selected_values.ident = '*';
+
+                select = document.getElementById("lon_lat");
+                select.selectedIndex = 0;
+                selected_values.lon_lat = '*';
+
+                select = document.getElementById("network");
+                select.selectedIndex = 0;
+                selected_values.network = '*';
+
+                select.dispatchEvent(new Event('change'));
+
+                updateMap();
+            }
+            else if(operation === "download_all_values") {
+                window.open(`/borinud/api/v1/dbajson/${selected_values.ident}/${selected_values.lon_lat}/` +
+                `${selected_values.network}/${selected_values.timerange}/${selected_values.level}/${selected_values.vars}/` +
+                `spatialseries/${selected_values.date.split("-")[0]}/${selected_values.date.split("-")[1]}/${selected_values.date.split("-")[2]}` +
+                `${selected_values.hour !== "*" ? "/" + selected_values.hour : ""}?dsn=${selected_values.dsn}`);
+            }
+            else if(operation === "graph_all_values") {
+                window.open(`/${url_vars[3]}/${selected_values.ident}/${selected_values.lon_lat}/` +
+                `${selected_values.network}/${selected_values.timerange}/${selected_values.level}/${selected_values.vars}/` +
+                `timeseries/${selected_values.date.split("-")[0]}/${selected_values.date.split("-")[1]}/${selected_values.date.split("-")[2]}` +
+                `${selected_values.hour !== "*" ? "/" + selected_values.hour : ""}?dsn=${selected_values.dsn}`);
+            }
+            else if(operation === "show_all_station") {
+                window.open(`/${url_vars[3]}/${selected_values.ident}/${selected_values.lon_lat}/` +
+                `${selected_values.network}/${selected_values.timerange}/${selected_values.level}/${selected_values.vars}/` +
+                `stations?dsn=${selected_values.dsn}`);
+            }
         }
 
     </script>
@@ -467,14 +612,22 @@
             </div>
 
             <div class="col-sm-6 col-md-4 col-lg-3">
-                <input id="newUrlClipboard" name="newUrlClipboard" type="text" style="display:none"/>
+                <label for="dsn" style="width: 100%">DNS</label>
+                <select id="dsn" name="dsn" onchange="populateDSN(this)">
+                    <option value="report">report</option>
+                    <option value="sample">sample</option>
+                </select>
             </div>
 
             <div class="col-sm-6 col-md-4 col-lg-3">
                 <br>
+                <!-- hide input used to copyurl to save query-->
+                <input id="newUrlClipboard" name="newUrlClipboard" type="text" style="display:none"/>
                 <button class="btn btn-success" style="width: 40%" onclick="copyUrl();">COPY URL</button>
                 <button class="btn btn-primary" style="width: 40%" onclick="updateMap();">SEARCH</button>
             </div>
+
+
 
         </div>
     </div>
@@ -483,6 +636,31 @@
     <br>
 
     <div id="mapid" style="height: 500px"></div>
+
+    <br>
+
+    <div class="row">
+        <div class="col-xs-12 col-sm-6 col-lg-3">
+            <button class="btn btn-success" style="width: 100%; margin-top: 5px;" onclick="openLink('show_all_values');">
+                {% trans "Show all values on a map" %}
+            </button>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-lg-3">
+            <button class="btn btn-primary" style="width: 100%; margin-top: 5px;" onclick="openLink('download_all_values');">
+                {% trans "Download data" %}
+            </button>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-lg-3">
+            <button class="btn btn-danger" style="width: 100%; margin-top: 5px;" onclick="openLink('graph_all_values');">
+                {% trans "Show all values on a graph" %}
+            </button>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-lg-3">
+            <button class="btn btn-warning" style="width: 100%; margin-top: 5px;" onclick="openLink('show_all_station');">
+                {% trans "Show stations on a map" %}
+            </button>
+        </div>
+    </div>
 
     <script>
 
@@ -548,7 +726,7 @@
             var url = `/borinud/api/v1/geojson/${selected_values.ident}/${selected_values.lon_lat}/` +
                 `${selected_values.network}/${selected_values.timerange}/${selected_values.level}/${selected_values.vars}/` +
                 `spatialseries/${selected_values.date.split("-")[0]}/${selected_values.date.split("-")[1]}/${selected_values.date.split("-")[2]}` +
-                `${selected_values.hour !== "*" ? "/" + selected_values.hour : ""}?dsn=report`;
+                `${selected_values.hour !== "*" ? "/" + selected_values.hour : ""}?dsn=${selected_values.dsn}`;
             //require map point
             $.ajax({
                 url: url,
@@ -681,10 +859,10 @@
 
                             pruneCluster.PrepareLeafletMarker = function (leafletMarker, data) {
                                 if (leafletMarker.getPopup()) {
-                                    //--leafletMarker.setPopupContent(setpopup(data.feature));
+                                    leafletMarker.setPopupContent(setpopup(data.feature));
                                 } else {
                                     //leafletMarker.bindPopup(data.name);
-                                    //-leafletMarker.bindPopup(setpopup(data.feature));
+                                    leafletMarker.bindPopup(setpopup(data.feature));
                                 }
                                 let val = (data.feature.properties.val * bcode.scale + bcode.offset).toPrecision(5).replace(/\.?0+$/, "");
                                 let vallen = val.length * 6 + 6;
