--- a/python/showdata/templates/showdata/spatialseries2.html
+++ b/python/showdata/templates/showdata/spatialseries2.html
@@ -58,7 +58,7 @@
         {
             let b = borinud.config.B[feature.properties.var];
 
-            let popupText = "<div id='preloadimages'>" +
+            let popupText = "<div id='preloadimages' style='z-index: 100000'>" +
                 "Ident: " + null2_(feature.properties.ident) +
                 "<br>Lon: " + feature.properties.lon/100000 +
                 "<br>Lat: " + feature.properties.lat/100000 +
@@ -67,7 +67,8 @@
                 "<br>Level: " + borinud.config.level.describe(feature.properties.level[0],feature.properties.level[1],feature.properties.level[2],feature.properties.level[3]) +
                 "<br>Date: " + feature.properties.date +
                 "<br>Var: " + b.description + " " + feature.properties.val + " (" + b.unit + ")" +
-                "<br><a href='/showdata/"+null2_(feature.properties.ident)+"/"+feature.properties.lon+","+feature.properties.lat+"/"+null2_(feature.properties.network)+"/*/*/*/stations{% if dsn %}?dsn={{dsn}}{% endif %}'>Constant station data</a>";
+                "<br><a href='/showdata/"+null2_(feature.properties.ident)+"/"+feature.properties.lon+","+feature.properties.lat+"/"+
+                null2_(feature.properties.network)+"/*/*/*/stations?dsn=" + selected_values.dsn + "'>Constant station data</a>";
 
 
             if(selected_values.dsn === 'sample' || selected_values.dsn === 'report'){
@@ -77,7 +78,6 @@
                     //let dateuntil="23:59_"+kwargs.get("year")+kwargs.get("month")+lastdayinmonth;
                     let datefrom="00:00_20200101";
                     let dateuntil="23:59_20200101";
-
 
                 popupText += "<br><a href='/showdata/"+null2_(feature.properties.ident)+"/"+feature.properties.lon+","+
                     feature.properties.lat+"/"+null2_(feature.properties.network)+"/"+feature.properties.trange+"/"+
@@ -542,21 +542,21 @@
 
             <div class="container col-sm-6 col-md-4 col-lg-3">
                 <div class="row select-date">
-                    <div class="col-sm-8">
+                    <div class="col-xs-8">
                         <label for="datetimepicker" style="width: 100%">Date</label>
                         <div class="input-group date" id="datetimepicker" data-target-input="nearest">
                             <div class="row">
                                 <input type="text" style="width: 80%"
-                                       class="form-control datetimepicker-input col-sm-10"
+                                       class="form-control datetimepicker-input col-xs-10"
                                        data-target="#datetimepicker"/>
-                                <div class="input-group-append col-sm-2" style="width: 20%"
+                                <div class="input-group-append col-xs-2" style="width: 20%"
                                      data-target="#datetimepicker" data-toggle="datetimepicker">
                                     <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4" style="padding-right: 0;">
+                    <div class="col-xs-4" style="padding-right: 0;">
                         <label for="hour" style="width: 100%">Hour</label>
                         <select id="hour" name="hour" onchange="populateHour(this)">
                             <option value="*">*</option>
@@ -911,7 +911,12 @@
                     });
                 },
                 error: function (jqXHR, textStatus, errorThrown) {
-                    $('#loading').html("<p>" + textStatus + "</p><p>Fatal error loading data!</p>");
+                    if (errorThrown === "Not Found"){
+                        $('#loading').html("<p>" + textStatus + "</p><p>No data!</p>");
+                    }
+                    else {
+                        $('#loading').html("<p>" + textStatus + "</p><p>Fatal error loading data!</p>");
+                    }
                 }
             })
         }
