--- a/python/showdata/templates/showdata/spatialseries2.html
+++ b/python/showdata/templates/showdata/spatialseries2.html
@@ -97,8 +97,8 @@
                     "&from=" + datefrom + "&until=" + dateuntil + "&hideLegend=true&tz=UTC&lineMode=connected&lineWidth=3&" +
                     "width=150&height=100&graphOnly=true"
                 let headerModal = "Ident: " + null2_(feature.properties.ident) + "Coords: " + feature.properties.lat + "," + feature.properties.lon +
-                    " Network:<a href=/network/" + null2_(feature.properties.network) + "> " + null2_(feature.properties.network) + "</a><br>" +
-                    +"<br>" + borinud.config.trange.describe(feature.properties.trange[0], feature.properties.trange[1], feature.properties.trange[2]) + "<br>" +
+                    " Network:<a href=/network/" + null2_(feature.properties.network) + "> " + null2_(feature.properties.network) + "</a>"
+                    +"<br>" + borinud.config.trange.describe(feature.properties.trange[0], feature.properties.trange[1], feature.properties.trange[2]) + "<br>"
                     +borinud.config.level.describe(feature.properties.level[0], feature.properties.level[1], feature.properties.level[2], feature.properties.level[3]) + "<br>" + datefrom + " - " + dateuntil + "GMT"
 
                 popupText += '<br><button onclick="showGraph(\'' + urlGraph + '\',\'' + headerModal + '\')" type="button" class="btn btn-default open-graph" >Show graph</button>';
